# fake

./: README.md
FacebookQt/: CMakeLists.txt  README.md  resources.qrc
FacebookQt/Backend/: Comment.h  Facebook.h  Friends.h  Liskes.h  Post.h  User.h  UserAuthentication.h
FacebookQt/Forms/: LoginPage.ui  SignupPage.ui
FacebookQt/Resources/styles/: light.qss
FacebookQt/src/: main.cpp
FacebookQt/src/Controllers/: BackendService.cpp  BackendService.h
FacebookQt/src/Utils/: UiHelpers.cpp  UiHelpers.h
FacebookQt/src/Views/: MainWindow.cpp  MainWindow.h
FacebookQt/src/Widgets/: PostCard.cpp  PostCard.h  UserCard.cpp  UserCard.h
